<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_friend_title"
        android:textSize="26sp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:hint="@string/enter_your_friend_s_username"
            android:id="@+id/etUsername"
            android:layout_marginRight="36dp"
            android:layout_marginLeft="36dp"
            android:inputType="text"
            />

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/errorET"
        android:text="@string/username_not_found"
        android:id="@+id/usernameCheckProgressbar"

        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/cancel"
            android:layout_marginRight="16dp"
            android:id="@+id/btnCancelUsernameDialog"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/confirm"
            android:id="@+id/btnConfirmUsernameDialog"/>

    </LinearLayout>


</LinearLayout>