<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:textDirection="ltr"
    android:layoutDirection="ltr"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/friend_request"
        android:textSize="30sp"
        android:id="@+id/typeOfRequest"
        android:textAlignment="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/request_sender"
            android:gravity="right"
            android:layout_marginRight="15dp"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:id="@+id/tvRequestSender"
            android:text="eyal green"
            android:textSize="20sp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textSize="20dp"
        android:id="@+id/contentOfRequest"
        android:text="Hello, I want to be your friend!"/>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        android:id="@+id/progress_bar"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/decline"
            android:layout_marginRight="16dp"
            android:textAllCaps="false"
            android:id="@+id/btnDeclineRequest"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/accept"
            android:textAllCaps="false"
            android:id="@+id/btnAcceptRequest"/>

    </LinearLayout>
</LinearLayout>