<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layoutDirection="ltr"
    android:textDirection="ltr"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_match"
        android:textSize="50sp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_players"
            android:layout_marginRight="20dp"
            android:textSize="30sp"/>
    <com.eyal.togetherun.MaxPlayersView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/maxPlayersView"
        />


    </LinearLayout>


   <com.eyal.togetherun.RunSettingsViews.TargetOfRunView
       android:layout_width="match_parent"
       android:layout_height="200dp"
       android:layout_marginTop="30dp"
       android:id="@+id/targetOfRunView"/>
    <Button

        android:layout_width="100dp"
        android:layout_height="50dp"
        android:textAllCaps="false"
        android:layout_marginTop="25dp"
        android:text="@string/create"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:id="@+id/createMatchBtn"/>
    <ProgressBar
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:id="@+id/progress_bar"/>
</LinearLayout>
