<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layoutDirection="ltr"
    android:textDirection="ltr"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/run_lobby"
        android:textSize="50sp"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_marginRight="10dp"
            android:text="Game Pin:"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="676593"
            android:textSize="25sp"
            android:id="@+id/tv_gamepin"
            android:textAlignment="center"

            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/waiting_for_all_players_to_connect"
        android:textSize="25sp"
        android:id="@+id/tv_waiting_for_all_players"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        />
    <Button
        android:id="@+id/btnInviteFriend"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@color/invite"
        android:layout_marginTop="16dp"
        android:text="Invite Friend"
        android:layout_marginBottom="16dp"
        android:textAllCaps="false" />
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/progress_bar"
            android:layout_weight="5"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:id="@+id/playersRecycleView">

        </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnQuit"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/cancel"
            android:layout_marginRight="16dp"
            android:text="@string/quit"
            android:textAllCaps="false" />
        <Button
            android:id="@+id/btnReady"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"

            android:background="@color/ready"
            android:text="@string/ready"
            android:textAllCaps="false" />
    </LinearLayout>



</LinearLayout>